# freedb

./: CMakeLists.txt  README.md  main.c
bees/: driver.c  driver.h  ev.h  kqueue.ch
freedb-cli/: main.c
resp/: marshal.c  resp.h  unmarshal.c
src/: client.c  client.h  command.c  command.h  config.c  config.h  connection.c  connection.h  dbEngine.c  dbEngine.h  db_engine.c  db_engine.h  error.c  error.h  processer.h  server.c  server.h  zmalloc.c  zmalloc.h  znet.c  znet.h
third/hashmap.h/: README.md  hashmap.h
utest/: all_tests.c  db_engine_test.c  resp_unmarshal_test.c
util/: util.c  util.h
